# react-actix-template

./: LICENSE  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile  docker-entrypoint.sh
backend/src/: db.rs  endpoints.rs  main.rs  util.rs
frontend/: Dockerfile
frontend/nginx/: nginx.conf
