[package]
name = "your_project_name_here"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
dotenvy = "0.15.7"
log = "0.4.21"
mysql = "20.0"


[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
panic = "abort"
